@@ -1,3 +1,9 @@
+Objective Caml 3.12.1:
+----------------------
+
+Bug fixes:
+- PR#4794, PR#4959: call annotations not generated by ocamlopt
+
 Objective Caml 3.12.0:
 ----------------------
 
